<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/view_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:background="@color/bg_row_background">

        <ImageView
            android:id="@+id/delete_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/delete_white"
            android:contentDescription="@string/delete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/delete_icon"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/view_foreground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="2dp"
        app:cardCornerRadius="2dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@color/cardBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/m_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/m_rating"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/dummy_title"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/m_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/m_title"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:layout_toStartOf="@+id/m_rating"
                android:fontFamily="sans-serif"
                android:text="@string/dummy_genre"
                android:textColor="@color/textColor"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/m_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/m_genre"
                android:layout_marginTop="5dp"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/m_rating"
                android:fontFamily="sans-serif"
                android:text="@string/dummy_year"
                android:textColor="@color/textColor"
                android:textSize="14sp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/m_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/m_genre"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/dummy_rating"
                android:textColor="@color/IMDBColor"
                android:textSize="14sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>