<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="30dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/note_Image"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/notegreen" />

        <TextView
            android:id="@+id/title_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:text="@string/new_note"
            android:fontFamily="@font/montserrat_bold"
            android:layout_toEndOf="@id/note_Image"
            android:textSize="20sp"
            android:textColor="@color/boxStrokeColor"
            tools:ignore="RelativeOverlap" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/materialTitle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/boxStrokeColor"
            android:layout_below="@id/note_Image"
            android:textColorHint="@color/hintTextColor"
            android:layout_marginTop="20dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/note_Image"
                android:fontFamily="@font/montserrat_bold"
                android:hint="@string/title_hint"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:importantForAutofill="no"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/materialGenre"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/boxStrokeColor"
            android:layout_below="@id/materialTitle"
            android:textColorHint="@color/hintTextColor"
            android:layout_marginTop="20dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/movie_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_title"
                android:hint="@string/genre_hint"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_bold"
                android:importantForAutofill="no"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/materialYear"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/materialGenre"
            app:boxStrokeColor="@color/boxStrokeColor"
            android:textColorHint="@color/hintTextColor"
            android:layout_marginTop="20dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/movie_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_genre"
                android:maxLength="4"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_bold"
                android:hint="@string/year_hint"
                android:importantForAutofill="no"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/materialRating"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/materialYear"
            app:boxStrokeColor="@color/boxStrokeColor"
            android:textColorHint="@color/hintTextColor"
            android:layout_marginTop="20dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/movie_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_year"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_bold"
                android:hint="@string/rating_hint"
                android:maxLength="3"
                android:textSize="16sp"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/materialRating"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_corner"
            android:text="@string/save"
            android:textColor="@color/black"
            android:backgroundTint="@color/boxStrokeColor"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_bold"/>

    </RelativeLayout>
</ScrollView>